--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.1",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1"
+    "prettier": "^2.0.5"
   }
 }
